Add dev:lint-config to replace sort-config command

--- a/config/pkg/lib/brotli.yml
+++ b/config/pkg/lib/brotli.yml
@@ -1,11 +1,5 @@
 brotli:
   type: library
-  pkg-configs:
-    - libbrotlicommon
-    - libbrotlidec
-    - libbrotlienc
-  headers:
-    - brotli
   artifact:
     source:
       type: ghtagtar
@@ -13,5 +7,11 @@ brotli:
       match: 'v1\.\d.*'
     binary: hosted
     metadata:
-      license-files: ['LICENSE']
+      license-files: [LICENSE]
       license: MIT
+  headers:
+    - brotli
+  pkg-configs:
+    - libbrotlicommon
+    - libbrotlidec
+    - libbrotlienc
