--- a/config/pkg/lib/attr.yml
+++ b/config/pkg/lib/attr.yml
@@ -1,7 +1,5 @@
 attr:
   type: library
-  static-libs@unix:
-    - libattr.a
   artifact:
     source:
       type: url
@@ -10,5 +8,7 @@ attr:
       type: url
       url: 'https://mirror.souseiseki.middlendian.com/nongnu/attr/attr-2.5.2.tar.gz'
     metadata:
-      license-files: ['doc/COPYING.LGPL']
+      license-files: [doc/COPYING.LGPL]
       license: LGPL-2.1-or-later
+  static-libs@unix:
+    - libattr.a
