--- a/config/pkg/lib/openssl.yml
+++ b/config/pkg/lib/openssl.yml
@@ -1,16 +1,10 @@
 openssl:
   type: library
-  static-libs@unix:
-    - libssl.a
-    - libcrypto.a
-  headers: ['openssl']
-  depends:
-    - zlib
   artifact:
     source:
       type: ghrel
       repo: openssl/openssl
-      match: 'openssl.+\.tar\.gz'
+      match: openssl.+\.tar\.gz
       prefer-stable: true
     source-mirror:
       type: filelist
@@ -18,5 +12,12 @@ openssl:
       regex: '/href="(?<file>openssl-(?<version>[^"]+)\.tar\.gz)"/'
     binary: hosted
     metadata:
-      license-files: ['LICENSE.txt']
+      license-files: [LICENSE.txt]
       license: OpenSSL
+  depends:
+    - zlib
+  headers:
+    - openssl
+  static-libs@unix:
+    - libssl.a
+    - libcrypto.a
