--- a/config/pkg/lib/libxml2.yml
+++ b/config/pkg/lib/libxml2.yml
@@ -4,16 +4,16 @@ libxml2:
     source:
       type: ghtagtar
       repo: GNOME/libxml2
-      match: 'v2\.\d+\.\d+$'
+      match: v2\.\d+\.\d+$
     metadata:
       license-files: [Copyright]
       license: MIT
   depends@unix:
     - libiconv
-  suggests@unix:
-    - xz
-    - zlib
   headers:
     - libxml2
   pkg-configs:
     - libxml-2.0
+  suggests@unix:
+    - xz
+    - zlib
