Use zig toolchain by default, lint files

--- a/config/env.ini
+++ b/config/env.ini
@@ -83,7 +83,7 @@ SPC_MICRO_PATCHES=static_extensions_win32,cli_checks,disable_huge_page,vcruntime
 ; - gnu-native: used for general linux distros, can build gnu target for the installed glibc version only.
 
 ; option to specify the target, superceded by SPC_TARGET if set
-SPC_LIBC=musl
+; SPC_LIBC=musl
 ; uncomment to link libc dynamically on musl
 ; SPC_MUSL_DYNAMIC=true
 
@@ -94,13 +94,13 @@ SPC_LIBC=musl
 ; `native-native`               - links against system libc dynamically
 ; `native-native-musl`          - links against musl libc statically
 ; `native-native-musl -dynamic` - links against musl libc dynamically
-; SPC_TARGET=
+SPC_TARGET=native-native-musl
 
-; compiler environments
-CC=${SPC_LINUX_DEFAULT_CC}
-CXX=${SPC_LINUX_DEFAULT_CXX}
-AR=${SPC_LINUX_DEFAULT_AR}
-LD=${SPC_LINUX_DEFAULT_LD}
+; compiler environments (default value is defined by selected toolchain)
+CC=${SPC_DEFAULT_CC}
+CXX=${SPC_DEFAULT_CXX}
+AR=${SPC_DEFAULT_AR}
+LD=${SPC_DEFAULT_LD}
 ; default compiler flags, used in CMake toolchain file, openssl and pkg-config build
 SPC_DEFAULT_C_FLAGS="-fPIC -Os"
 SPC_DEFAULT_CXX_FLAGS="-fPIC -Os"
@@ -132,11 +132,11 @@ OPENSSLDIR=""
 ; build target: macho or macho (possibly we could support macho-universal in the future)
 ; Currently we do not support universal and cross-compilation for macOS.
 SPC_TARGET=native-macos
-; compiler environments
-CC=clang
-CXX=clang++
-AR=ar
-LD=ld
+; compiler environments (default value is defined by selected toolchain)
+CC=${SPC_DEFAULT_CC}
+CXX=${SPC_DEFAULT_CXX}
+AR=${SPC_DEFAULT_AR}
+LD=${SPC_DEFAULT_LD}
 ; default compiler flags, used in CMake toolchain file, openssl and pkg-config build
 SPC_DEFAULT_C_FLAGS="--target=${MAC_ARCH}-apple-darwin -Os"
 SPC_DEFAULT_CXX_FLAGS="--target=${MAC_ARCH}-apple-darwin -Os"
