Use new brand name

--- a/config/env.ini
+++ b/config/env.ini
@@ -48,7 +48,7 @@ SPC_SKIP_DOCTOR_CHECK_ITEMS=""
 ; extra modules that xcaddy will include in the FrankenPHP build
 SPC_CMD_VAR_FRANKENPHP_XCADDY_MODULES="--with github.com/dunglas/mercure/caddy --with github.com/dunglas/vulcain/caddy --with github.com/dunglas/caddy-cbrotli"
 ; The display message for php version output (PHP >= 8.4 available)
-PHP_BUILD_PROVIDER="static-php-cli ${SPC_VERSION}"
+PHP_BUILD_PROVIDER="StaticPHP ${SPC_VERSION}"
 ; Whether to enable log file (if you are using vendor mode)
 SPC_ENABLE_LOG_FILE="yes"
 ; The LOG DIR for spc logs
