--- a/config/pkg/lib/imagemagick.yml
+++ b/config/pkg/lib/imagemagick.yml
@@ -1,18 +1,11 @@
 imagemagick:
   type: library
   artifact:
-    source: {
-      "type": "ghtar",
-      "repo": "ImageMagick/ImageMagick"
-    }
+    source:
+      type: ghtar
+      repo: ImageMagick/ImageMagick
     metadata:
       license-files: [LICENSE]
-  lang: cpp
-  pkg-configs: [
-    "Magick++-7.Q16HDRI",
-    "MagickCore-7.Q16HDRI",
-    "MagickWand-7.Q16HDRI"
-  ]
   depends:
     - zlib
     - libjpeg
@@ -28,5 +21,8 @@ imagemagick:
     - xz
     - libzip
     - libxml2
-
-
+  lang: cpp
+  pkg-configs:
+    - Magick++-7.Q16HDRI
+    - MagickCore-7.Q16HDRI
+    - MagickWand-7.Q16HDRI
