--- a/config/pkg/lib/libzip.yml
+++ b/config/pkg/lib/libzip.yml
@@ -1,19 +1,13 @@
 libzip:
   type: library
   artifact:
-    source: {
-      "type": "ghrel",
-      "repo": "nih-at/libzip",
-      "match": "libzip.+\\.tar\\.xz",
-      "prefer-stable": true
-    }
+    source:
+      type: ghrel
+      repo: nih-at/libzip
+      match: libzip.+\.tar\.xz
+      prefer-stable: true
     metadata:
       license-files: [LICENSE]
-  static-libs@unix:
-    - libzip.a
-  headers:
-    - zip.h
-    - zipconf.h
   depends@unix:
     - zlib
   suggests@unix:
@@ -21,3 +15,8 @@ libzip:
     - xz
     - zstd
     - openssl
+  headers:
+    - zip.h
+    - zipconf.h
+  static-libs@unix:
+    - libzip.a
