--- a/config/pkg/lib/imap.yml
+++ b/config/pkg/lib/imap.yml
@@ -1,14 +1,13 @@
 imap:
   type: library
   artifact:
-    source: {
-      "type": "git",
-      "url": "https://github.com/static-php/imap.git",
-      "rev": "master"
-    }
+    source:
+      type: git
+      url: 'https://github.com/static-php/imap.git'
+      rev: master
     metadata:
       license-files: [LICENSE]
-  static-libs@unix:
-    - libc-client.a
   suggests@unix:
     - openssl
+  static-libs@unix:
+    - libc-client.a
