add input with-suggested-libs for build command

--- a/.github/workflows/build-unix.yml
+++ b/.github/workflows/build-unix.yml
@@ -46,6 +46,10 @@ on:
         description: Prefer pre-built binaries (reduce build time)
         type: boolean
         default: true
+      with-suggested-libs:
+        description: Build with suggested libs
+        type: boolean
+        default: false
       debug:
         description: Show full build logs
         type: boolean
@@ -86,6 +90,10 @@ on:
         description: Prefer pre-built binaries (reduce build time)
         type: boolean
         default: true
+      with-suggested-libs:
+        description: Include suggested libs
+        type: boolean
+        default: false
       debug:
         description: Show full build logs
         type: boolean
@@ -156,6 +164,9 @@ jobs:
           fi
           if [ ${{ inputs.prefer-pre-built }} == true ]; then
               DOWN_CMD="$DOWN_CMD --prefer-pre-built"
+          fi
+          if [ ${{ inputs.with-suggested-libs }} == true ]; then
+              BUILD_CMD="$BUILD_CMD --with-suggested-libs"
           fi
           if [ ${{ inputs.build-cli }} == true ]; then
               BUILD_CMD="$BUILD_CMD --build-cli"
