--- a/config/env.ini
+++ b/config/env.ini
@@ -79,7 +79,7 @@ SPC_MICRO_PATCHES=static_extensions_win32,cli_checks,disable_huge_page,vcruntime
 SPC_LIBC=musl
 ; uncomment to link libc dynamically on musl
 ; SPC_MUSL_DYNAMIC=true
-SPC_STATIC_LIBS=true
+SPC_LINK_STATIC=true
 
 ; Recommended: specify your target here. Zig toolchain will be used.
 ; examples:
