--- a/config/env.ini
+++ b/config/env.ini
@@ -98,7 +98,7 @@ LD=${SPC_LINUX_DEFAULT_LD}
 ; default compiler flags, used in CMake toolchain file, openssl and pkg-config build
 SPC_DEFAULT_C_FLAGS="-fPIC -Os"
 SPC_DEFAULT_CXX_FLAGS="-fPIC -Os"
-SPC_DEFAULT_LD_FLAGS="-Wl,--as-needed -Wl,--undefined-version"
+SPC_DEFAULT_LD_FLAGS="-Wl,--as-needed"
 ; upx executable path
 UPX_EXEC=${PKG_ROOT_PATH}/bin/upx
 ; phpmicro patches, for more info, see: https://github.com/easysoft/phpmicro/tree/master/patches
